--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -303,7 +303,16 @@
 </ul>
 <p>You must also certify that information you provided on Form TD1-IN is correct and complete.</p>
 
-<details><summary>Situation: Employment-related income (for example, pension income, retiring allowances, RRSP and CPP/QPP)</summary>
+<details><summary>What if the First Nations employee's employment situation change</summary>
+<p>If the facts of the First Nations employee’s employment situation change over the course of the year, you may need to reexamine whether the tax exemption will still apply. Changes that requires you to reexamine whether the income will be exempt from tax for the remainder of the year include:</p>
+ <ul class="fa-ul">
+<li><span class="fas fa-check fa-li text-success"></span> A change in the First Nations employee’s residence, on or off reserve</li>
+<li><span class="fas fa-check fa-li text-success"></span> A change in the employer’s residence, on or off reserve</li>
+<li><span class="fas fa-check fa-li text-success"></span> A change in the location of the employment duties</li>
+</ul>
+</details>
+
+<details><summary>What if the income is employment-related income (for example, pension income, retiring allowances, RRSP and CPP/QPP)</summary>
 <div id="ajax-non-emp">
 <p>Generally, if the employee is receiving employment-related income, for example: unemployment insurance benefits, retiring allowances, Canada Pension Plan (CPP) payments, Quebec Pension Plan (QPP) payments, Registered Pension Plan (RPP) benefits or Wage Loss Replacement Plan (WLRP) benefits, the employment-related income is exempt from income tax when the payment is received as a result of employment income that was exempt from income tax. </p>
 
