--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -345,6 +345,8 @@
  <div id="ajax-uncommon">
 <p>You can use the employment income guidance for common employment situations. Depending on the situation, there are other uncommon factors that result in employment income being treated differently. This means that any factors connecting the income to a reserve must be analyzed based on various court decisions to determine if the exemption applies. </p>
 
+<p>For example, situations where a First Nations employee is also a shareholder are considered uncommon employment situations.</p>
+
 <p><a href="#ajax-uncommon1" aria-controls="ajax-uncommon1" class="overlay-lnk" role="button">Examples where exempt (uncommon situations) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-uncommon2" aria-controls="ajax-uncommon2" class="overlay-lnk" role="button">Examples where <strong>not</strong> exempt (uncommon situations) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example-leasing" aria-controls="ajax-example-leasing" class="overlay-lnk" role="button">Employee leasing: Tax planning arrangements (various court decisions) <span class="far fa-question-circle"></span></a> </p>
@@ -375,7 +377,7 @@
 
 <p><a href="#ajax-example2a" aria-controls="ajax-example2a" class="overlay-lnk" role="button">Examples where exempt (guideline 2) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example2b" aria-controls="ajax-example2b" class="overlay-lnk" role="button">Examples where <strong>not</strong> exempt (guideline 2) <span class="far fa-question-circle"></span></a> </p>
-<p>Where First Nations employee is a shareholder who controls the business (non-arm's length with the corporation), the source of the business income may be relevant in determining whether the tax exemption under section 87 of the Indian Act applies to the income received in the shareholder's capacity as an employee. Where the source of the business income in this situation is off the reserve, the employment income (salary and bonuses) will not be considered to be connected to the reserve and will not be exempt from tax. </p>
+
 </details>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your First Nations employee lives on a reserve <strong>and</strong> you (as the employer) are a resident on a reserve, continue to <a href="#tab1-step4a">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
