--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -335,7 +335,7 @@
   <div id="ajax-notreg">
 <p>You must deduct CPP, EI and income tax as you would for your other employees. </p> 
 </div></li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the employee meets all conditions for the exemption, continue to <a href="#step2">Step 2 - Determine if you can use the guidance to determine if the employment income is tax-exempt or partially tax-exempt</a>.</li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the First Nations employee meets all conditions for the exemption, continue to <a href="#step2">Step 2 - Determine if you can use the guidance to determine if the employment income is tax-exempt or partially tax-exempt</a>.</li>
 </ul>
 	
  </li>
