--- a/payroll/calculate/payment/first-nations-pop.html
+++ b/payroll/calculate/payment/first-nations-pop.html
@@ -315,7 +315,7 @@
   <strong>On a reserve</strong> 
  </dt> 
  <dd> 
- <div id="def4">  <p>"On a reserve" means on a reserve as defined for purposes of the Indian Act, including any settlements deemed to be reserves for purposes of the Indian Settlements Remission Order, and any other areas given similar treatment under federal legislation (for example, Category I-A lands under the Cree-Naskapi" (of Quèbec) Act).</p> </div>
+ <div id="def4">  <p>"On a reserve" means on a reserve as defined for purposes of the Indian Act, including any settlements deemed to be reserves for purposes of the Indian Settlements Remission Order, and any other areas given similar treatment under federal legislation (for example, Category 1-A lands under the Cree-Naskapi (of Quebec) Act).</p> </div>
  </dd> 
  <dt> 
   <strong>Social, cultural, educational or economic development</strong> 
