--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -413,7 +413,8 @@
 </li>
 
 <li><h4 id="step3c">Determine the percentage of duties related to employment on a reserve</h4>
-<p>To determine if guidelines 1 or 3 apply to the employment income, you need to determine the portion of employment duties performed on a reserve. The following 2 factors are generally taken into account when determining the portion of employment duties performed on a reserve:</p>
+<p>To determine if guidelines 1 or 3 apply to the employment income, you need to determine the portion of employment duties performed on a reserve. </p>
+<p>The following 2 factors are generally taken into account when determining the portion of employment duties performed on a reserve:</p>
 
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">Whether an actual "duty of employment" was performed (the First Nations employee was required to perform the particular task and was compensated by the employer for performing that particular task)</li>
