--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -303,7 +303,7 @@
 </ul>
 <p>You must also certify that information you provided on Form TD1-IN is correct and complete.</p>
 
-<details><summary>What if the First Nations employee's employment situation change</summary>
+<details><summary>What if the First Nations employee's employment situation changes</summary>
 <p>If the facts of the First Nations employee’s employment situation change over the course of the year, you may need to reexamine whether the tax exemption will still apply. Changes that requires you to reexamine whether the income will be exempt from tax for the remainder of the year include:</p>
  <ul class="fa-ul">
 <li><span class="fas fa-check fa-li text-success"></span> A change in the First Nations employee’s residence, on or off reserve</li>
