add info alert test

--- a/jmlt333/recognized-educational-institutions-outside-canada.html
+++ b/jmlt333/recognized-educational-institutions-outside-canada.html
@@ -280,7 +280,13 @@ Recognized educational institutions outside Canada</h1>
         <p>The Canada Revenue Agency (CRA)&nbsp;maintains a list of <a href="/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-32300-your-tuition-education-textbook-amounts/recognized-educational-institutions-outside-canada/universities-higher-educational-institutions.html">recognized universities and higher educational institutions outside Canada</a> (excluding the United States, the United Kingdom and all of the Commonwealth countries) and&nbsp;a list of <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-prescribed-universities-outside-canada.html">universities outside Canada registered as qualified donees</a> for the purposes of the tuition tax credit. Use these lists to confirm&nbsp;if an educational institution located outside Canada can issue official tax receipts.</p>
 <p>Educational institutions outside Canada on these lists have been reviewed and approved by the CRA for the purposes of the tuition tax credit.</p>
 <p>The United States, the United Kingdom, and the Commonwealth countries maintain their own lists of recognized universities and higher educational institutions. The links to these lists are available in the Information Sheet <a href="/en/revenue-agency/services/forms-publications/publications/rc192.html">RC192, Information for Students - Educational Institutions Outside Canada</a>.</p>
-<p>Students can also direct enquiries regarding educational&nbsp;institutions and the tuition tax credit&nbsp;to the CRA’s general enquiries line at <strong>1‑800‑959-8281</strong>.</p>
+
+	<section class="alert alert-info">
+  <h3>Current status of the call for applications: Closed</h3>
+  <p>Thank you for your interest in Canada Summer Jobs. Applications are now closed.</p>
+</section>
+	
+	<p>Students can also direct enquiries regarding educational&nbsp;institutions and the tuition tax credit&nbsp;to the CRA’s general enquiries line at <strong>1‑800‑959-8281</strong>.</p>
 <p>For more information relating to recognized educational institutions and the tuition tax credit, see the <a href="/en/revenue-agency/services/tax/technical-information/income-tax/income-tax-folios-index/series-1-individuals/folio-2-students/income-tax-folio-s1-f2-c2-tuition-tax-credit.html">Income Tax Folio S1-F2-C2, Tuition Tax Credit</a>.</p>
 
     
