--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -563,16 +563,18 @@
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax <span class="wb-inv">(do not withhold)</span></li> 	 
- <li><span class="fas fa-check fa-li text-success"></span> EI <small class="text-muted">(all income)</small></li>
- <li><span class="fas fa-check fa-li text-success"></span> CPP <small class="text-muted">(<strong>only</strong> if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a>)</small></li>
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small class="text-muted">- Do not withhold</small></li> 	 
+ <li><span class="fas fa-check fa-li text-success"></span> EI <small class="text-muted">- Withhold on all income</small></li>
+ <li><span class="fas fa-check fa-li text-success"></span> CPP <small class="text-muted">- Withhold <strong>only</strong> if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a></small></li>
 </ul></li>
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 <small class="text-muted">(<strong>only</strong> if you filed Form CPT124)</small> </li>
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small class="text-muted">(all income)</small></li>
-<li><span class="fas fa-check fa-li text-success"></span>Code 69 on tax-exempt non-eligible retiring allowances you paid</li>
- <li><span class="fas fa-check fa-li text-success"></span>Code 71 on tax-exempt employment income you paid </li>
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 <small class="text-muted">- Report <strong>only</strong> if you filed Form CPT124</small> </li>
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small class="text-muted">- Report on all income</small></li>
+<li><span class="fas fa-triangle-exclamation fa-li text-warning"></span> Box 20  <small class="text-muted">- Do not report (you must provide proof to your employee of RPP contributions for all tax-exempt income, your employee will use this amount to fill out Form T90)</small></li> 	
+<li><span class="fas fa-triangle-exclamation fa-li text-warning"></span> Box 44 <small class="text-muted">- Do not report (you must provide proof to your employee of union dues withheld from all tax-exempt income, your employee will use this amount to fill out Form T90)</small></li> 	
+<li><span class="fas fa-check fa-li text-success"></span>Code 69 <small class="text-muted">- Report only on tax-exempt non-eligible retiring allowances you paid</small></li>
+ <li><span class="fas fa-check fa-li text-success"></span>Code 71 <small class="text-muted">- Report only on tax-exempt employment income you paid </small></li>
 </ul></li>
 </ul>
 <div id="ajax-cpp-info">
@@ -587,16 +589,18 @@
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span> Income tax <small class="text-muted">(<strong>only</strong> on taxable income)</small></li> 	
- <li><span class="fas fa-check fa-li text-success"></span> EI <small class="text-muted">(on <strong>all</strong> income)</small></li> 	
-<li><span class="fas fa-check fa-li text-success"></span> CPP <small class="text-muted">(<strong>only</strong> on taxable income <strong>or</strong> on all income if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a>)</small></li>  
+<li><span class="fas fa-check fa-li text-success"></span> Income tax <small class="text-muted">- Withhold <strong>only</strong> on taxable income</small></li> 	
+ <li><span class="fas fa-check fa-li text-success"></span> EI <small class="text-muted">- Withhold on <strong>all</strong> income</small></li> 	
+<li><span class="fas fa-check fa-li text-success"></span> CPP <small class="text-muted">- Withhold <strong>only</strong> on taxable income <strong>or</strong> on all income if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a></small></li>  
  </ul></li>
 
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 14 <small class="text-muted">(<strong>only</strong> on taxable income)</small></li>
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 <small class="text-muted">(<strong>only</strong> on taxable income <strong>or</strong> on all income if you filed Form CPT124)</small> </li>
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small class="text-muted">(on <strong>all</strong> income)</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 14 <small class="text-muted">- Report <strong>only</strong> on taxable income</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 <small class="text-muted">- Report <strong>only</strong> on taxable income <strong>or</strong> on all income if you filed Form CPT124</small> </li>
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small class="text-muted">Report on <strong>all</strong> income</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Box 20 <small class="text-muted">- Report <strong>only</strong> on taxable income (you must provide proof to your employee of RPP contributions for all tax-exempt income, your employee will use this amount to fill out Form T90)</small></li>
+<li><span class="fas fa-check fa-li text-success"></span> Box 44 <small class="text-muted">Report <strong>only</strong> on taxable income (you must provide proof to your employee of union dues withheld from all tax-exempt income, your employee will use this amount to fill out Form T90)</small></li> 
 <li><span class="fas fa-check fa-li text-success"></span>Code 66 if you paid eligible retiring allowances <small class="text-muted">(<strong>only</strong> on taxable income)</small></li>
  <li><span class="fas fa-check fa-li text-success"></span>Code 67 if you paid non-eligible retiring allowances <small class="text-muted">(<strong>only</strong> on taxable income)</small></li>
 <li><span class="fas fa-check fa-li text-success"></span>Code 69 if you paid non-eligible retiring allowances <small class="text-muted">(<strong>only</strong> on tax-exempt income)</small></li>
