--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1116,7 +1116,7 @@
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><p><strong>Do not</strong> report an amount for <abbr title="Registered pension plan">RPP</abbr> contributions relating to tax-exempt income you paid to an employee who is registered, or entitled to be registered under the Indian Act using box 20.</p>
 <p>If you pay taxable or partly tax-exempt employment income, you must prorate the <abbr title="registered pension plan">RPP</abbr> contribution and report the amount related to their taxable income using code box 20.</p>
-<p>Give your employee proof of the amounts of <abbr title="registered pension plan">RPP</abbr> contributions for all tax-exempt income.</p>
+<p>Give your employee proof of the amounts of <abbr title="registered pension plan">RPP</abbr> contributions for all tax-exempt income. Your employee will use this amount to fill out Form T90.</p>
 </dd>
 
 <dt><abbr title="Registered retirement savings plan">RRSP</abbr> </dt>
@@ -1199,7 +1199,7 @@
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><p><strong>Do not</strong> report an amount for union dues relating to tax-exempt income you paid to an employee who is registered, or entitled to be registered under the Indian Act using box 44.</p>
 <p>If you pay taxable or partly tax-exempt employment income, you must prorate the amount for union dues and report the amount related to their taxable income using box 44.</p>
-<p>Give your employee proof of the amounts of union dues for all tax-exempt income.</p>
+<p>Give your employee proof of the amounts of union dues for all tax-exempt income. Your employee will use this amount to fill out Form T90.</p>
 </dd>
 </dl>
             </details>
