--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -560,7 +560,7 @@
  <details><summary>Income all exempt</summary> 
 <div id="tab1-step4a">
 	
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- Do not withhold</small></li> 	 
@@ -586,7 +586,7 @@
 
  <details><summary>Income partly-exempt</summary> 
 <div id="tab1-step4b">
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-check fa-li text-success"></span> Income tax <small>- Withhold <strong>only</strong> on taxable income</small></li> 	
