--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -546,7 +546,8 @@
 <p> <a href="#ajax-example1apro" aria-controls="ajax-example1apro" class="overlay-lnk" role="button">Examples where exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example1bpro" aria-controls="ajax-example1bpro" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 </details>
-<p class="mrgn-tp-xl"><span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to <a href="#tab1-step4b">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income partly-exempt</strong>.</p>
+<br>
+<p><span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to <a href="#tab1-step4b">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income partly-exempt</strong>.</p>
 </li>
 
 </ol>
@@ -599,13 +600,14 @@
 <li><span class="fas fa-check fa-li text-success"></span>Boxes 14 <small>- Report <strong>only on taxable</strong>  employment income</small></li>
 <li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 <small>- Report CPP contributions and pensionable earnings <strong>only on taxable income</strong> <strong>or</strong> on all income if you filed Form CPT124</small> </li>
 <li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small>Report EI premiums and insurable earnings on <strong>all</strong> income</small></li>
-<li><span class="fas fa-check fa-li text-success"></span>Box 20 <small>- Report RPP contributions <strong>only on taxable income</strong> (you must provide proof to your employee of RPP contributions for all tax-exempt income, your employee will use this amount to fill out Form T90)</small></li>
-<li><span class="fas fa-check fa-li text-success"></span> Box 44 <small>- Report union dues <strong>only on taxable income</strong> (you must provide proof to your employee of union dues withheld from all tax-exempt income, your employee will use this amount to fill out Form T90)</small></li> 
+<li><span class="fas fa-check fa-li text-success"></span>Box 20 <small>- Report <strong>only on taxable income</strong> 
+ if you withheld RPP contributions (you must provide proof to your employee of RPP contributions for all tax-exempt income, your employee will use this amount to fill out Form T90)</small></li>
+<li><span class="fas fa-check fa-li text-success"></span> Box 44 <small>- Report <strong>only on taxable income</strong> if you withheld union dues (you must provide proof to your employee of union dues withheld from all tax-exempt income, your employee will use this amount to fill out Form T90)</small></li> 
 <li><span class="fas fa-check fa-li text-success"></span>Code 66 <small>- Report <strong>only on taxable income</strong> if you paid eligible retiring allowances </small></li>
  <li><span class="fas fa-check fa-li text-success"></span>Code 67 <small>- Report <strong>only on taxable income </strong> if you paid non-eligible retiring allowances</small></li>
-<li><span class="fas fa-check fa-li text-success"></span>Code 69 <small>- Report <strong>only tax-exempt</strong> non-eligible retiring allowances you paid</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Code 69 <small>- Report <strong>only tax-exempt</strong> if you paid non-eligible retiring allowances</small></li>
 <li><span class="fas fa-check fa-li text-success"></span>Code 71 <small>- Report <strong>only tax-exempt</strong> employment income</small></li>
-<li><span class="fas fa-check fa-li text-success"></span>Codes for taxable benefits (for example, code 40) <small class="text-muted">- Report <strong>only on taxable</strong> income</small> </li>
+<li><span class="fas fa-check fa-li text-success"></span>Codes for taxable benefits (for example, code 40) <small class="text-muted">- Report <strong>only on taxable income</strong> if you provided employment benefits</small> </li>
 </ul></li>
 </ul>
  <div data-ajax-replace="#ajax-cpp-info"></div>
