--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -755,18 +755,20 @@
  <details><summary>Income all exempt</summary> 
    <div id="ajax-t4-how-self-ex">
 
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax <span class="wb-inv">(do not withhold)</span></li> 	 
- <li><span class="fas fa-check fa-li text-success"></span> EI <small class="text-muted">(under special EI regulations, EI is remitted on behalf of the worker on all of their insurable earnings)</small></li>
-  <li><span class="fas fa-times text-danger fa-li"></span> CPP <span class="wb-inv">(do not withhold)</span></li>
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>  
+ <li><span class="fas fa-check fa-li text-success"></span> EI <small>- Withhold  on <strong>all</strong> income (under special EI regulations, EI is remitted on behalf of the worker on all of their insurable earnings)</small></li>
+  <li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li>
  
 </ul></li>
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small class="text-muted">(all income)</small></li>
- <li><span class="fas fa-check fa-li text-success"></span>Code 88 <small class="text-muted">(tax-exempt self-employment income)</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small>- Report EI premiums and insurable earnings on <strong>all</strong> income</small></li>
+<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 20  <small>- <strong>Do not</strong> report RPP contributions (you must provide proof to the self-employed worker of RPP contributions for all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)</small></li> 	
+<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 44 <small>- <strong>Do not</strong> report union dues (you must provide proof to the self-employed worker of union dues withheld from all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)</small></li> 	
+ <li><span class="fas fa-check fa-li text-success"></span>Code 88 <small>- Report <strong>tax-exempt</strong> self-employment income</small></li>
 </ul></li>
 </ul>
  
@@ -775,22 +777,26 @@
 
  <details><summary>Income partly-exempt</summary> 
    <div id="ajax-t4-how-self-part">
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<ul class="list-unstyled cnjnctn-type-and ">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax <span class="wb-inv">(do not withhold)</span></li> 		
-<li><span class="fas fa-check fa-li text-success"></span> EI <small class="text-muted">(under special EI regulations, EI is remitted on behalf of the worker on all of their insurable earnings)</small></li>	
-  <li><span class="fas fa-times text-danger fa-li"></span> CPP <span class="wb-inv">(do not withhold)</span></li>  
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>	
+ <li><span class="fas fa-check fa-li text-success"></span> EI <small>- Withhold  on <strong>all</strong> income (under special EI regulations, EI is remitted on behalf of the worker on all of their insurable earnings)</small></li>	
+ <li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li>  
  </ul></li>
 
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 29 <small class="text-muted">(appropriate code)</small></li>
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small class="text-muted">(<strong>only</strong> on taxable income)</small></li>
-<li><span class="fas fa-check fa-li text-success"></span>Codes 78, 79 and 80 <small class="text-muted">(<strong>only</strong> on taxable income of <strong>self-employed fishers</strong>)</small></li>
-<li><span class="fas fa-check fa-li text-success"></span>Code 82 <small class="text-muted">(<strong>only</strong> on taxable income of <strong>self-employed taxi drivers and drivers of other passenger-carrying vehicles</strong>)</small></li>
- <li><span class="fas fa-check fa-li text-success"></span>Code 83 <small class="text-muted">(<strong>only</strong> on taxable income of <strong>self-employed barbers and hairdressers</strong>)</small></li>
- <li><span class="fas fa-check fa-li text-success"></span>Code 88 <small class="text-muted">(<strong>only</strong> on the tax-exempt income of the self-employed worker)</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 29 <small>- Use the appropriate self-employment code</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small>- Report EI premiums and insurable earnings on <strong>all</strong> income</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Box 20 <small>- Report <strong>only on taxable income</strong> 
+ if you withheld RPP contributions (you must provide proof to to the self-employed worker of RPP contributions for all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)</small></li>
+<li><span class="fas fa-check fa-li text-success"></span> Box 44 <small>- Report <strong>only on taxable income</strong> if you withheld union dues (you must provide proof to to the self-employed worker of union dues withheld from all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)</small></li> 
+<li><span class="fas fa-check fa-li text-success"></span>Codes 78, 79 and 80 <small>- Report <strong>only on taxable income</strong> of <strong>self-employed fishers</strong></small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Code 82  <small>- Report <strong>only on taxable income</strong> of <strong>self-employed taxi drivers and drivers of other passenger-carrying vehicles</strong></small></li>
+ <li><span class="fas fa-check fa-li text-success"></span>Code 83  <small>- Report <strong>only on taxable income</strong> of <strong>self-employed barbers and hairdressers</strong></small></li>
+ <li><span class="fas fa-check fa-li text-success"></span>Code 88 <small>- Report <strong>tax-exempt</strong> self-employment income</small></li>
+
 </ul></li>
 </ul>
 
@@ -802,17 +808,17 @@
  <details><summary>Income all exempt</summary> 
    <div id="ajax-t4a-how-self-ex">
 
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<ul class="list-unstyled cnjnctn-type-and ">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax <span class="wb-inv">(do not withhold)</span></li> 		
- <li><span class="fas fa-times text-danger fa-li"></span> EI <span class="wb-inv">(do not withhold)</span></li>
- <li><span class="fas fa-times text-danger fa-li"></span> CPP <span class="wb-inv">(do not withhold)</span></li>  
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>	
+<li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold</small></li>
+<li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li>  
  
 </ul></li>
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
- <li><span class="fas fa-check fa-li text-success"></span>Code 144 <small class="text-muted">(tax-exempt other income)</small></li>
+ <li><span class="fas fa-check fa-li text-success"></span>Code 144 <small>- Report <strong>tax-exempt</strong> other income</small></li>
 </ul></li>
 </ul>
  	 </div>
@@ -820,19 +826,19 @@
 
  <details><summary>Income partly-exempt</summary> 
    <div id="ajax-t4a-how-self-part">
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<ul class="list-unstyled cnjnctn-type-and ">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax <span class="wb-inv">(do not withhold)</span></li> 		
- <li><span class="fas fa-times text-danger fa-li"></span> EI <span class="wb-inv">(do not withhold)</span></li>
- <li><span class="fas fa-times text-danger fa-li"></span> CPP <span class="wb-inv">(do not withhold)</span></li>   
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>	
+<li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold</small></li>
+<li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li>  
  </ul></li>
 
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span>Box 028 <small class="text-muted">(<strong>only</strong> on taxable fees for services)</small> </li>
-<li><span class="fas fa-check fa-li text-success"></span>Box 048 <small class="text-muted">(<strong>only</strong> on taxable other income)</small></li>
- <li><span class="fas fa-check fa-li text-success"></span>Code 144  <small class="text-muted">(tax-exempt other income)</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Box 028 <small>- Report <strong>only on taxable income</strong> if you paid fees for services</small> </li>
+<li><span class="fas fa-check fa-li text-success"></span>Box 048 <small>- Report <strong>only on taxable income</strong> other income</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Code 144 <small>- Report <strong>tax-exempt</strong> other income</small></li>
 </ul></li>
 </ul>
 
@@ -869,12 +875,12 @@
 <p class="mrgn-bttm-lg">Generally, you must withhold the following deductions and report on a <strong>T4A slip</strong> the payment you made to a First Nations recipient:</p>
  <details><summary>Income all exempt</summary> 
 <div id="ajax-t4a-how-ex">
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<ul class="list-unstyled cnjnctn-type-and ">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax <span class="wb-inv">(do not withhold)</span></li> 	 
- <li><span class="fas fa-times text-danger fa-li"></span> EI <span class="wb-inv">(do not withhold)</span></li>
- <li><span class="fas fa-times text-danger fa-li"></span> CPP <span class="wb-inv">(do not withhold)</span></li>  
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>	
+<li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold</small></li>
+<li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li> 
 </ul></li>
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
@@ -887,12 +893,12 @@
 <p class="mrgn-tp-md">Generally, income is exempt from tax when a person receives them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p>
   </details>
  <details><summary>Income partly-exempt</summary> 
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<ul class="list-unstyled cnjnctn-type-and ">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax <span class="wb-inv">(do not withhold)</span></li> 	 
- <li><span class="fas fa-times text-danger fa-li"></span> EI <span class="wb-inv">(do not withhold)</span></li>
- <li><span class="fas fa-times text-danger fa-li"></span> CPP <span class="wb-inv">(do not withhold)</span></li>  
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>	
+<li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold</small></li>
+<li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li>  
 </ul></li>
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
