--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -572,8 +572,8 @@
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 <small>- Report CPP contributions and pensionable earnings <strong>only</strong> if you filed Form CPT124</small> </li>
 <li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small>- Report EI premiums and insurable earnings on <strong>all</strong> income</small></li>
-<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 20  <small>- <strong>Do not</strong> report RPP contributions (you must provide proof to your employee of RPP contributions for all tax-exempt income, your employee will use this amount to fill out Form T90)</small></li> 	
-<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 44 <small>- <strong>Do not</strong> report union dues (you must provide proof to your employee of union dues withheld from all tax-exempt income, your employee will use this amount to fill out Form T90)</small></li> 	
+<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 20  <small>- <strong>Do not</strong> report if you withheld RPP contributions (you must provide proof to your employee of RPP contributions for all tax-exempt income, your employee will use this amount to fill out Form T90)</small></li> 	
+<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 44 <small>- <strong>Do not</strong> report if you withheld union dues (you must provide proof to your employee of union dues withheld from all tax-exempt income, your employee will use this amount to fill out Form T90)</small></li> 	
 <li><span class="fas fa-check fa-li text-success"></span>Code 69 <small>- Report <strong>tax-exempt</strong> non-eligible retiring allowances you paid</small></li>
  <li><span class="fas fa-check fa-li text-success"></span>Code 71 <small>- Report <strong>tax-exempt</strong> employment income</small></li>
 </ul></li>
@@ -766,8 +766,8 @@
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small>- Report EI premiums and insurable earnings on <strong>all</strong> income</small></li>
-<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 20  <small>- <strong>Do not</strong> report RPP contributions (you must provide proof to the self-employed worker of RPP contributions for all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)</small></li> 	
-<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 44 <small>- <strong>Do not</strong> report union dues (you must provide proof to the self-employed worker of union dues withheld from all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)</small></li> 	
+<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 20  <small>- <strong>Do not</strong> report if you withheld RPP contributions (you must provide proof to the self-employed worker of RPP contributions for all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)</small></li> 	
+<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 44 <small>- <strong>Do not</strong> report if you withheld union dues (you must provide proof to the self-employed worker of union dues withheld from all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)</small></li> 	
  <li><span class="fas fa-check fa-li text-success"></span>Code 88 <small>- Report <strong>tax-exempt</strong> self-employment income</small></li>
 </ul></li>
 </ul>
@@ -792,9 +792,9 @@
 <li><span class="fas fa-check fa-li text-success"></span>Box 20 <small>- Report <strong>only on taxable income</strong> 
  if you withheld RPP contributions (you must provide proof to to the self-employed worker of RPP contributions for all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)</small></li>
 <li><span class="fas fa-check fa-li text-success"></span> Box 44 <small>- Report <strong>only on taxable income</strong> if you withheld union dues (you must provide proof to to the self-employed worker of union dues withheld from all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)</small></li> 
-<li><span class="fas fa-check fa-li text-success"></span>Codes 78, 79 and 80 <small>- Report <strong>only on taxable income</strong> of <strong>self-employed fishers</strong></small></li>
-<li><span class="fas fa-check fa-li text-success"></span>Code 82  <small>- Report <strong>only on taxable income</strong> of <strong>self-employed taxi drivers and drivers of other passenger-carrying vehicles</strong></small></li>
- <li><span class="fas fa-check fa-li text-success"></span>Code 83  <small>- Report <strong>only on taxable income</strong> of <strong>self-employed barbers and hairdressers</strong></small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Codes 78, 79 and 80 <small>- Report <strong>taxable income</strong> of <strong>self-employed fishers</strong></small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Code 82  <small>- Report <strong>taxable income</strong> of <strong>self-employed taxi drivers and drivers of other passenger-carrying vehicles</strong></small></li>
+ <li><span class="fas fa-check fa-li text-success"></span>Code 83  <small>- Report <strong>taxable income</strong> of <strong>self-employed barbers and hairdressers</strong></small></li>
  <li><span class="fas fa-check fa-li text-success"></span>Code 88 <small>- Report <strong>tax-exempt</strong> self-employment income</small></li>
 
 </ul></li>
@@ -884,10 +884,11 @@
 </ul></li>
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
- <li><span class="fas fa-check fa-li text-success"></span>Code 144 <small class="text-muted">(tax-exempt other income)</small></li>
- <li><span class="fas fa-check fa-li text-success"></span> Code 146 <small class="text-muted">(tax-exempt pension or superannuation)</small> </li>
- <li><span class="fas fa-check fa-li text-success"></span> Code 148 <small class="text-muted">(tax-exempt lump-sum payments)</small></li>
- <li><span class="fas fa-check fa-li text-success"></span> Code 195 <small class="text-muted">(tax-exempt PRPP payments)</small> </li>
+<li><span class="fas fa-check fa-li text-success"></span>Code 144 <small>- Report <strong>tax-exempt</strong> other income</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Code 146 <small>- Report <strong>tax-exempt</strong> pension or superannuation</small></li>
+
+ <li><span class="fas fa-check fa-li text-success"></span> Code 148 <small>- Report <strong>tax-exempt</strong> lump-sum payments</small></li>
+ <li><span class="fas fa-check fa-li text-success"></span> Code 195 <small>- Report <strong>tax-exempt</strong> PRPP payments</small> </li>
 </ul></li>
 </ul>
 <p class="mrgn-tp-md">Generally, income is exempt from tax when a person receives them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p>
@@ -903,12 +904,12 @@
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
 <h5>Pension or superannuation</h5>
- <li><span class="fas fa-check fa-li text-success"></span> Box 016 <small class="text-muted">(<strong>only</strong> on the taxable pension or superannuation)</small></li>
- <li><span class="fas fa-check fa-li text-success"></span> Code 146 <small class="text-muted">(<strong>only</strong> on the tax-exempt pension or superannuation)</small> </li>
- <li><span class="fas fa-check fa-li text-success"></span> Code 195 <small class="text-muted">(tax-exempt PRPP payments)</small> </li>
+ <li><span class="fas fa-check fa-li text-success"></span> Box 016 <small>- Report <strong>taxable</strong> pension or superannuation</small></li>
+ <li><span class="fas fa-check fa-li text-success"></span> Code 146 <small>- Report <strong>tax-exempt</strong> pension or superannuation</small> </li>
+ <li><span class="fas fa-check fa-li text-success"></span> Code 195 <small>- Report <strong>tax-exempt</strong> PRPP payments</small> </li>
 <h5>Lump-sum payments</h5>
- <li><span class="fas fa-check fa-li text-success"></span> Box 018 <small class="text-muted">(<strong>only</strong> on the taxable lump-sum payments)</small></li>
- <li><span class="fas fa-check fa-li text-success"></span> Code 148 <small class="text-muted">(<strong>only</strong> on the tax-exempt lump-sum payments)</small></li>
+ <li><span class="fas fa-check fa-li text-success"></span> Box 018 <small>- Report <strong>taxable</strong> lump-sum payments</small></li>
+ <li><span class="fas fa-check fa-li text-success"></span> Code 148 <small>- Report <strong>tax-exempt</strong> lump-sum payments</small></li>
 </ul>
 </li>
 </ul>
